solid start, nav and javascript set

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,12 @@
  *= require_self
  */
 @import "materialize";
+
+body{
+	font-family: 'Rajdhani', sans-serif;
+	background-color: black;
+}
+
+a{
+	font-family: 'Rajdhani', sans-serif;
+}
