--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,5 +1,28 @@
-<h1>New Contact</h1>
+<div class="row" align="center" style="margin-top: 15%">
+	<h4 style="color:white;">Contact Us!</h4>
+	
+	<div align="center">
+		<div class="row">
+	        <ul class="social-network social-circle">
+	          <li><a href="#" target="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+	          <li><a href="#" target="_blank" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
+	          <li><a href="#" target="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+	          <li><a href="#" target="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+	        </ul>
+	      </div>
+	 </div>
 
-<%= render 'form', contact: @contact %>
+	
+	<div style="margin-top: 2%">
+		<%= render 'form', contact: @contact %>
+	</div>
 
-<%= link_to 'Back', contacts_path %>
+
+	
+
+
+
+
+</div>
+
+
