--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,38 @@
-<h1>Pages#about</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<div class="container">
+	<div class="row" align="center" style="margin-top: 20%">
+		<div class="col s4">
+			<div>
+				<i class="medium material-icons" style="color: #dbc361">tap_and_play</i>
+				<h5 style="color: white">Forex Signals</h5>
+				<p style="color: white"><strong>Forex Signal Telegram Group</strong></p>
+				<p style="margin-top: 5%; color: white">
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pulvinar pellentesque habitant morbi tristique senectus et. Turpis egestas maecenas pharetra convallis. Proin fermentum leo vel orci porta non pulvinar. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Nunc pulvinar sapien et ligula ullamcorper. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Ultricies integer quis auctor elit sed vulputate mi sit amet. At consectetur lorem donec massa sapien faucibus et molestie. Dui accumsan sit amet nulla facilisi morbi tempus iaculis.
+				</p>
+			</div>
+		</div>
+
+		<div class="col s4">
+			<div>
+				<i class="medium material-icons" style="color: #dbc361">trending_up</i>
+				<h5 style="color: white">Student Mentorship </h5>
+				<p style="color: white"><strong>Intensive Training, Devoted Community, Live Trading Sessions</strong> </p>
+				<p style="margin-top: 5%; color: white">
+					Dignissim convallis aenean et tortor at risus viverra. Nibh ipsum consequat nisl vel pretium. Gravida neque convallis a cras. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Tristique senectus et netus et malesuada fames ac turpis egestas. Vitae auctor eu augue ut lectus arcu bibendum. Vestibulum morbi blandit cursus risus at. Convallis a cras semper auctor neque vitae tempus quam pellentesque. At tellus at urna condimentum mattis pellentesque. Morbi blandit cursus risus at ultrices. Magna fermentum iaculis eu non diam phasellus vestibulum. Tempus urna et pharetra pharetra massa massa ultricies mi quis. Euismod nisi porta lorem mollis aliquam ut porttitor leo a. Velit ut tortor pretium viverra suspendisse potenti nullam ac.
+				</p>
+			</div>
+			
+		</div>
+
+		<div class="col s4">
+			<div>
+				<i class="medium material-icons" style="color: #dbc361">account_balance</i>
+				<h5 style="color: white">Account Management</h5>
+				<p style="color: white"><strong>Secure & Trusted Account Managment Services</strong></p>
+				<p style="margin-top: 5%; color: white">
+					Mi eget mauris pharetra et. Congue quisque egestas diam in arcu. Diam ut venenatis tellus in metus vulputate. Ac auctor augue mauris augue neque gravida. Turpis egestas pretium aenean pharetra magna. Netus et malesuada fames ac turpis egestas integer. Facilisis leo vel fringilla est. Aliquam nulla facilisi cras fermentum odio eu. Velit laoreet id donec ultrices tincidunt arcu non sodales neque. Fermentum dui faucibus in ornare quam viverra. Eros in cursus turpis massa tincidunt dui.
+				</p>				
+			</div>
+			
+		</div>
+	</div>
+</div>
