--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,14 +12,15 @@
  *
  *= require_tree .
  *= require_self
+ *= stub "active_admin"
  */
 @import "materialize";
 
 body{
-	font-family: 'Rajdhani', sans-serif;
+	font-family: 'Old Standard TT', serif;
 	background-color: black;
 }
 
 a{
-	font-family: 'Rajdhani', sans-serif;
+	font-family: 'Old Standard TT', serif;
 }
