--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -1,37 +1,68 @@
-<%= form_with(model: contact, local: true) do |form| %>
-  <% if contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
+  <div class="container">
 
-      <ul>
-      <% contact.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+    <div class="row" align="center">
+      
+      <div class="col s12" align="center">
+                  <%= form_with(model: contact, local: true) do |form| %>
+                    <% if contact.errors.any? %>
+                  <div id="error_explanation">
+                            <h2><%= pluralize(contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
+
+                            <ul>
+                            <% contact.errors.full_messages.each do |message| %>
+                              <li><%= message %></li>
+                            <% end %>
+                            </ul>
+                        
+                        <% end %>
+                        <div class="form-group" id="contactform">
+
+                              <div class="row" style="margin: 5px;">
+
+                                    <div class="col s4">
+                                        <div>
+                                          <strong><%= form.label :first_name, style: 'color: white;' %></strong><br>
+                                          <%= form.text_field :first_name, class: 'form-control', style: 'color: white;' %>
+                                        </div>
+                                    </div>
+
+                                    <div class="col s4">
+                                        <div class="field">
+                                          <strong><%= form.label :last_name, style: 'color: white;' %></strong><br>
+                                          <%= form.text_field :last_name, class: 'form-control', style: 'color: white;' %>
+                                        </div>
+                                    </div>
+
+                                  <div class="col s4">
+                                      <div class="field">
+                                        <strong><%= form.label :email, style: 'color: white;' %></strong><br>
+                                        <%= form.email_field :email, class: 'form-control', style: 'color: white;' %>
+                                      </div>
+                                  </div>
+                                  
+                              </div>
+
+                                <div class="row" style="margin-top: 1%; margin: 5px;">
+                                    <div class="field">
+                                      <strong><%= form.label :description, style: 'color: white;' %></strong><br>
+                                      <%= form.text_area :description, :style => 'width: 100%; height: 120px; color: white;', :class => 'form-control' %>
+                                    </div> 
+                                </div>
+
+
+                                <div align="center" class="row" style="margin-top: 3%;">
+                                  <%= form.submit "Send", class: "btn waves-effect waves-light", :style => "background-color: #E8D124; color: white; margin-top: 10px; width:23%;" %>
+                                </div>
+                      </div>
+
+              <% end %>
+              </div>
+
+      </div>
+
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :first_name %>
-    <%= form.text_field :first_name %>
+    
   </div>
 
-  <div class="field">
-    <%= form.label :last_name %>
-    <%= form.text_field :last_name %>
-  </div>
 
-  <div class="field">
-    <%= form.label :email %>
-    <%= form.text_field :email %>
-  </div>
 
-  <div class="field">
-    <%= form.label :description %>
-    <%= form.text_area :description %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
-<% end %>
