--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+	<div class="row" align="center" style="margin-bottom: 80%; margin-top: 10%">
+		<div class="col s12">
+			<div style="opacity: 0.9">
+				<%= image_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png', :style => 'width: 40%; height: auto;' %>
+				<h3 style="color: white">Exponential Growth Capital</h3>
+			</div>
+			<div>
+				    <div class="row" align="center" >
+			          <%= link_to "More Info...", pages_about_path, class: "btn waves-effect waves-light", style: "background-color: #dbc361; color: black;" %>
+			        </div>
+			</div>
+		</div>
+	</div>
+</div>
