--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,35 +1,44 @@
 <div class="container">
-	<div class="row" align="center" style="margin-top: 20%">
-		<div class="col s4">
-			<div>
+
+	<div class="row" style="margin-top: 15%" data-aos="fade-right" data-aos-duration="1000">
+		<div class="col s8" align="left">
+			<div class="col s2">
 				<i class="medium material-icons" style="color: #dbc361">tap_and_play</i>
+			</div>
+			<div class="col s6">
+				
 				<h5 style="color: white">Forex Signals</h5>
-				<p style="color: white"><strong>Forex Signal Telegram Group</strong></p>
+				
 				<p style="margin-top: 5%; color: white">
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Pulvinar pellentesque habitant morbi tristique senectus et. Turpis egestas maecenas pharetra convallis. Proin fermentum leo vel orci porta non pulvinar. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant. Nunc pulvinar sapien et ligula ullamcorper. Tempor id eu nisl nunc mi ipsum faucibus vitae aliquet. Ultricies integer quis auctor elit sed vulputate mi sit amet. At consectetur lorem donec massa sapien faucibus et molestie. Dui accumsan sit amet nulla facilisi morbi tempus iaculis.
+					Too busy to be looking at charts all day? Let us do the analysis while you just wait for the alert. Join our Forex Signals group chat on telegram where our expert traders provide you with three to five signals per day. Our signals have a 90% success rate. We provide you with point of entry, recommended stop loss, and a take profit. Our signals telegram also serves as a traders chat room in which all members and admin can discuss open trades and ideas together. 
 				</p>
 			</div>
 		</div>
-
-		<div class="col s4">
-			<div>
-				<i class="medium material-icons" style="color: #dbc361">trending_up</i>
-				<h5 style="color: white">Student Mentorship </h5>
-				<p style="color: white"><strong>Intensive Training, Devoted Community, Live Trading Sessions</strong> </p>
+	</div>
+	<div class="row" style="margin-top: 5%" data-aos="fade-left" data-aos-duration="2000">
+		<div class="col s6 push-s7" align="right">
+			<div class="col s8">
+				<h5 style="color: white">Live Trading Sessions </h5>
 				<p style="margin-top: 5%; color: white">
-					Dignissim convallis aenean et tortor at risus viverra. Nibh ipsum consequat nisl vel pretium. Gravida neque convallis a cras. Vel elit scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Tristique senectus et netus et malesuada fames ac turpis egestas. Vitae auctor eu augue ut lectus arcu bibendum. Vestibulum morbi blandit cursus risus at. Convallis a cras semper auctor neque vitae tempus quam pellentesque. At tellus at urna condimentum mattis pellentesque. Morbi blandit cursus risus at ultrices. Magna fermentum iaculis eu non diam phasellus vestibulum. Tempus urna et pharetra pharetra massa massa ultricies mi quis. Euismod nisi porta lorem mollis aliquam ut porttitor leo a. Velit ut tortor pretium viverra suspendisse potenti nullam ac.
+					Here at Exponential Growth Capital, we host Live Trading Sessions Monday-Friday from 8:30AM EST to 11:30AM EST via ZOOM video and voice chat. When you sign up for our Live Sessions, you will get an invite to join the ZOOM call at 8:30 every morning and get to listen in to our executive trading team and students call out trades for you to take. We average about 100 pips per session with little to no drawdown in trades executed.
 				</p>
+			</div>
+			<div class="col s2">
+				<i class="medium material-icons" style="color: #dbc361">trending_up</i>
 			</div>
 			
 		</div>
-
-		<div class="col s4">
+	</div>
+	<div class="row" style="margin-top: 5%; margin-bottom: 20%" align="left" data-aos="fade-right" data-aos-duration="3000">
+		<div class="col s2">
+			<i class="medium material-icons" style="color: #dbc361">group</i>
+		</div>
+		<div class="col s6">
 			<div>
-				<i class="medium material-icons" style="color: #dbc361">account_balance</i>
-				<h5 style="color: white">Account Management</h5>
-				<p style="color: white"><strong>Secure & Trusted Account Managment Services</strong></p>
+				<h5 style="color: white">Mentorship</h5>
+				
 				<p style="margin-top: 5%; color: white">
-					Mi eget mauris pharetra et. Congue quisque egestas diam in arcu. Diam ut venenatis tellus in metus vulputate. Ac auctor augue mauris augue neque gravida. Turpis egestas pretium aenean pharetra magna. Netus et malesuada fames ac turpis egestas integer. Facilisis leo vel fringilla est. Aliquam nulla facilisi cras fermentum odio eu. Velit laoreet id donec ultrices tincidunt arcu non sodales neque. Fermentum dui faucibus in ornare quam viverra. Eros in cursus turpis massa tincidunt dui.
+					For those of you interested in becoming an expert trader to learn everything about the foreign exchange market, including how our team of experts and students are able to bring in thousands of dollars every week, we offer a mentorship program. With our mentorship program, you will be granted access to our signal chat, live trading sessions, and will receive one on one personalized training by one of our executive traders. By signing up for the mentorship, you will receive bi-weekly individualized calls with an executive team member. Additionally, we host bi-weekly webinars with all mentorship students. During these webinars, we review the previous trading week, discuss upcoming trades, fundamental analysis, market structure, in addition to any questions raised during the session. We demonstrate how to trade through all market conditions, including major news events that may impact trades, and impart our knowledge on confirmations that we use to look for trade setups, guiding you on becoming a consistently profitable trader. Even after you are consistently profitable, the Exponential Growth community is here for you! 
 				</p>				
 			</div>
 			
