--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,5 +1,5 @@
     <!-- Footer -->
-    <footer class="footer" style="background-color: #dbc361; height: 40%; width: 100%; padding: 3%; color: black; margin-top: 25%; border-radius: 10px; opacity: 0.8">
+    <footer class="footer" style="background-color: #dbc361; height: auto; width: 100%; padding: 3%; color: black; border-radius: 10px; opacity: 0.8">
 
     	<div class="row">
         	<div class="col s6" >
@@ -9,6 +9,7 @@
     			<ul align="center" style="list-style-type: none;">
     				<li><%= link_to "Home", root_path, style: "color: black;" %></li>
     				<li><%= link_to "About Us", pages_about_path, style: "color: black;" %></li>
+                    <li><%= link_to "Terms & Conditions", pages_terms_path, style: "color: black;" %></li>
     				<li><%=link_to 'Contact', new_contact_path, :style => "text-decoration: none; color: black;" %></li>
     				
     			</ul>
@@ -22,11 +23,10 @@
 
         	<div class="col s6">
         		<h4 align="center">
-        			Contact:
+        			Social Media:
         		</h4>
 
         		<ul align="center" style="list-style-type: none;">
-        			<li><strong>Email:</strong> test@example.com </li>
         			<li><a href="https://instagram.com/expgrowthcapital?utm_source=ig_profile_share&igshid=1381lcsdm2qnf" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
                     <li><a href="#" target="_blank" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
                     <li><a href="#" target="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
