--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -29,7 +29,7 @@
 			
 		</div>
 	</div>
-	<div class="row" style="margin-top: 5%; margin-bottom: 20%" align="left" data-aos="fade-right" data-aos-duration="3000">
+	<div class="row" style="margin-top: 5%; margin-bottom: 2%" align="left" data-aos="fade-right" data-aos-duration="3000">
 		<div class="col s2">
 			<i class="medium material-icons" style="color: #dbc361">group</i>
 		</div>
@@ -44,4 +44,7 @@
 			
 		</div>
 	</div>
+	   <div class="row" style="margin-bottom: 25%;">
+	    <div class="col s12" align="center"><%= link_to "Get In Touch Now!!!", new_contact_path, class: "btn waves-effect waves-light pulse", style: "background-color: #dbc361; color: black;" %></div>
+	  </div>
 </div>
