--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,8 +68,8 @@
           <nav id="nav" style="margin-bottom: 5%; background-color: white">
 
                 <div class="nav-wrapper">
-                  <a href="#!" class="brand-logo" style="background-color:rgba(0, 0, 0, 0.0);"><%= image_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png', :style => 'width: 50px; height: auto; margin:11%;' %></a>
-                  <a href="/" data="no-turbolink" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+                  <a href="#!" class="brand-logo" style="background-color:rgba(0, 0, 0, 0.0);"><%= image_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png', :style => 'width: 50px; height: auto; margin: 11%;' %></a>
+                  <a href="/" data="no-turbolink" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons" style="width: 150%; height: auto;">menu</i></a>
                   <ul class="right hide-on-med-and-down" style="margin-top: 1.5%">
 
                           <li ><%=link_to 'Home', root_path, :style => "text-decoration: none; color: black;" %></li>
