mailer set, effects added, social added

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -3,11 +3,10 @@
 	
 	<div align="center">
 		<div class="row">
-	        <ul class="social-network social-circle">
-	          <li><a href="#" target="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-	          <li><a href="#" target="_blank" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-	          <li><a href="#" target="_blank" class="icoInstagram" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-	          <li><a href="#" target="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
+	        <ul >
+	 
+	          <li><a href="https://instagram.com/expgrowthcapital?utm_source=ig_profile_share&igshid=1381lcsdm2qnf" class="waves-effect waves-light btn social instagram" style="background-color: #dbc361; color: black;"><i class="fa fa-instagram"></i> Check Out Our Instagram!</a></li>
+
 	        </ul>
 	      </div>
 	 </div>
