--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 
-	<div class="row" style="margin-top: 15%" data-aos="fade-right" data-aos-duration="1000">
+	<div class="row" style="margin-top: 15%" data-aos="flip-up" data-aos-duration="2000">
 		<div class="col s8" align="left">
 			<div class="col s2">
 				<i class="medium material-icons" style="color: #dbc361">tap_and_play</i>
@@ -15,7 +15,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="row" style="margin-top: 5%" data-aos="fade-left" data-aos-duration="2000">
+	<div class="row" style="margin-top: 5%" data-aos="flip-down" data-aos-duration="2000">
 		<div class="col s6 push-s7" align="right">
 			<div class="col s8">
 				<h5 style="color: white">Live Trading Sessions </h5>
@@ -29,7 +29,7 @@
 			
 		</div>
 	</div>
-	<div class="row" style="margin-top: 5%; margin-bottom: 2%" align="left" data-aos="fade-right" data-aos-duration="3000">
+	<div class="row" style="margin-top: 5%; margin-bottom: 15%" align="left" data-aos="flip-up" data-aos-duration="3000">
 		<div class="col s2">
 			<i class="medium material-icons" style="color: #dbc361">group</i>
 		</div>
