--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,5 +1,5 @@
     <!-- Footer -->
-    <footer class="footer" style="background-color: #dbc361; height: auto; width: 100%; padding: 3%; color: black; border-radius: 10px; opacity: 0.8">
+    <footer class="footer" style="background-color: #dbc361; height: auto; width: 100%; padding: 3%; color: black; border-radius: 10px; opacity: 0.8" data-aos="fade-up" data-aos-duration="2500">
 
     	<div class="row">
         	<div class="col s6" >
@@ -27,10 +27,8 @@
         		</h4>
 
         		<ul align="center" style="list-style-type: none;">
-        			<li><a href="https://instagram.com/expgrowthcapital?utm_source=ig_profile_share&igshid=1381lcsdm2qnf" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
-                    <li><a href="#" target="_blank" class="icoTwitter" title="Twitter"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#" target="_blank" class="icoLinkedin" title="Linkedin"><i class="fa fa-linkedin"></i></a></li>
-                    <li><a href="#" target="_blank" class="icoFacebook" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+        			<li><a style="background-color: hotpink; color: black;" href="https://instagram.com/expgrowthcapital?utm_source=ig_profile_share&igshid=1381lcsdm2qnf" target="_blank" class="waves-effect waves-light btn-floating btn-large social instagram"> <i class="fa fa-instagram"></i>Instagram</a></li>
+                    
         		</ul>
         	</div>
     	</div>
