--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="row" align="center" style="margin-top: 15%">
+<div class="row" align="center" style="margin-top: 15%;">
 	<h4 style="color:white;">Contact Us!</h4>
 	
 	<div align="center">
@@ -12,7 +12,7 @@
 	 </div>
 
 	
-	<div style="margin-top: 2%">
+	<div style="margin-top: 2%; margin-bottom: 60%">
 		<%= render 'form', contact: @contact %>
 	</div>
 
