--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,5 +1,5 @@
     <!-- Footer -->
-    <footer class="footer" style="background-color: #dbc361; height: auto; width: 100%; padding: 3%; color: black; border-radius: 10px; opacity: 0.8" data-aos="fade-up" data-aos-duration="2500">
+    <footer class="footer" style="background-color: #dbc361; height: auto; width: 100%; padding: 3%; color: black; border-radius: 10px; opacity: 0.8" >
 
     	<div class="row">
         	<div class="col s6" >
