signals user added reconfigure in new branch update master

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -12,6 +12,12 @@
 				<p style="margin-top: 5%; color: white">
 					Too busy to be looking at charts all day? Let us do the analysis while you just wait for the alert. Join our Forex Signals group chat on telegram where our expert traders provide you with three to five signals per day. Our signals have a 90% success rate. We provide you with point of entry, recommended stop loss, and a take profit. Our signals telegram also serves as a traders chat room in which all members and admin can discuss open trades and ideas together. 
 				</p>
+
+				<div style="margin-top: 2%">
+					<%= link_to "Subscribe!!!", new_signal_user_path, class: "btn waves-effect waves-light pulse", style: "background-color: #dbc361; color: black;" %>
+				</div>
+
+				
 			</div>
 		</div>
 	</div>
