--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,40 +64,14 @@
 
   <body>
 
-    <header style="background-color: black">
+    <%= render 'partials/nav' %>
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
 
-          <nav id="nav" style="margin-bottom: 5%; background-color: white" data-aos="fade-down" data-aos-duration="2500">
 
-                <div class="nav-wrapper">
-                  <a href="#!" class="brand-logo" style="background-color:rgba(0, 0, 0, 0.0);"><%= image_tag asset_path('logo.png'), :rel => 'icon', :type =>  'image/png', :style => 'width: 50px; height: auto; margin: 11%;' %></a>
-                  <a href="/" data="no-turbolink" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons" style="width: 150%; height: auto;">menu</i></a>
-                  <ul class="right hide-on-med-and-down" style="margin-top: 1.5%">
-
-                          <li ><%=link_to 'Home', root_path, :style => "text-decoration: none; color: black;" %></li>
-
-                          <li ><%=link_to 'About', pages_about_path, :style => "text-decoration: none; color: black;" %></li>
-
-                          <li ><%=link_to 'Contact', new_contact_path, :style => "text-decoration: none; color: black;" %></li>
-
-                  </ul>
-                </div>
-          
-
-                <ul class="sidenav" id="mobile-demo">
-                          <li ><%=link_to 'Home', root_path, :style => "text-decoration: none; color: black;" %></li> 
-
-                          <li ><%=link_to 'About', pages_about_path, :style => "text-decoration: none; color: black;" %></li>
-
-                          <li ><%=link_to 'Contact', new_contact_path, :style => "text-decoration: none; color: black;" %></li>
-                </ul>
-
-          </nav>
-
-     
-    </header>
-
-      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
+    <script src="https://js.stripe.com/v3"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      
       
   
     <%= yield %>
